# biosynonyms

./: .cruft.json  .gitignore  CITATION.cff  MANIFEST.in  README.md  negatives.tsv  pyproject.toml  setup.cfg  synonyms.tsv  tox.ini
.github/: CONTRIBUTING.md
.github/workflows/: tests.yml
docs/source/: conf.py  index.rst  installation.rst  usage.rst
exports/: README.md  biosynonyms.ttl
notebooks/: analyze.ipynb
src/biosynonyms/: __init__.py  __main__.py  app.py  generate_owl.py  indra_db_prediction.py  lint.py  model.py  predict.py  sort_synonyms.py  version.py
src/biosynonyms/resources/: __init__.py  negatives.tsv  positives.tsv  unentities.tsv  unentities.txt
tests/: test_integrity.py  test_model.py
