##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = biosynonyms
version = 0.0.1-dev
description = A decentralized database of synonyms for biomedical concepts and entities.
long_description = file: README.md
long_description_content_type = text/markdown

# Links
url = https://github.com/biopragmatics/biosynonyms
download_url = https://github.com/biopragmatics/biosynonyms/releases
project_urls =
    Bug Tracker = https://github.com/biopragmatics/biosynonyms/issues

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
keywords =
    databases
    biological databases
    biomedical databases

[options]
install_requires =
    bioregistry

zip_safe = false
include_package_data = True
python_requires = >=3.7

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    coverage
    pytest
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = biosynonyms
omit =
    tests/*
    docs/*
    src/biosynonyms/cli.py
    src/biosynonyms/__main__.py

[coverage:paths]
source =
    src/biosynonyms
    .tox/*/lib/python*/site-packages/biosynonyms

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

[mypy]
plugins = pydantic.mypy

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    E203
    W503
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    biosynonyms
    tests
